# valence

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: main.rs
contracts/valence-core/: Cargo.toml
contracts/valence-core/src/: lib.rs
crates/valence-types/: Cargo.toml
crates/valence-types/src/: lib.rs
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useStellarPasskey.ts
