[package]
name = "valence-backend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7", features = ["json", "tokio", "http1", "macros"] }
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
 soroban-sdk = { version = "26.0.0", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
valence-types = { path = "../crates/valence-types", default-features = false, features = ["std", "serde_support"] }
