[package]
name = "valence-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "26.0.0", default-features = false, features = ["alloc"] }
valence-types = { path = "../../crates/valence-types", default-features = false, features = ["soroban"] }
