[package]
name = "valence-types"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
std = []
soroban = ["soroban-sdk"]
serde_support = ["serde"]

[dependencies]
soroban-sdk = { version = "26.0.0", optional = true, default-features = false, features = ["alloc"] }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive", "alloc"] }
